i forgot to do the mobile sidebar, so i've just now completed it

--- a/index.html
+++ b/index.html
@@ -1415,6 +1415,475 @@
     <!-- End of main-content div -->
     <!-- sidebar test code start-->
     <div class="sidebar">
+      <div class="sidebar-small">
+        <ul>
+          <li>
+            <a href="https://www.netmatters.co.uk/contact-us"> Contact Us </a>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/bespoke-software">
+              <span class="icon__nav-bar--bespoke"></span>
+              <small>Bespoke</small>
+              Software
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/bespoke-crm">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Bespoke CRM</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/business-automation">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business Automation</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/software-integrations">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Software Integrations</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/mobile-app-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Mobile App Development</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/bespoke-databases">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Bespoke Databases</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/sharepoint-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Sharepoint Development</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/operational-systems">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Operational Systems</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/systems-integrations/microsoft-business-central">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business Central Implementation</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/internet-of-things">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Internet of Things (IoT) Software</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/intranet-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Intranet Development</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/customer-portal-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Customer Portal Development</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/bespoke-software/reporting-hub">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Reporting Hub</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/it-support">
+              <span class="icon__nav-bar--it-support"></span>
+              <small>IT</small>
+              Support
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/managed-it-support">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Managed IT Support</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/business-it-support">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business IT Support</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/office-365-for-business">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Office 365 for Business</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/it-consultancy">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>IT Consultancy</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/cloud-service-provider">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Cloud Service Provider</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/it-support/data-backup-disaster-recovery">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Data Backup &amp; Disaster Recovery</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/digital-marketing">
+              <span class="icon__nav-bar--digital-marketing"></span>
+              <small>Digital</small>
+              Marketing
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/seo-search-engine-optimisation">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Search Engine Optimisation (SEO)</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/ppc">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Pay Per Click Advertising (PPC)</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/conversion-marketing">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Conversion Rate Optimisation (CRO)</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/email-marketing">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Email Marketing</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/social-media-marketing">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Social Media Marketing</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/digital-marketing/content-marketing">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Content Marketing</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/telecoms-services">
+              <span class="icon__nav-bar--telecoms-services"></span>
+              <small>Telecoms</small>
+              Services
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/business-mobile">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business Mobile</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/hosted-business-voip">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Hosted VoIP Provider</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/business-voip">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business VoIP Systems</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/business-broadband-provider">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Business Broadband</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/leased-lines-provider">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Leased Lines Provider</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/telecoms-services/3cx-systems">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>3CX Systems</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/web-design">
+              <span class="icon__nav-bar--web-design"></span>
+              <small>Web</small>
+              Design
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/bespoke-website-design">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Bespoke Website Design</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/ecommerce-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>eCommerce Website Design</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/pay-monthly-websites">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Pay Monthly Websites</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/branding">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Branding &amp; Design</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/mobile-app-development">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Mobile App Development</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/web-design/web-hosting">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Web Hosting</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/cyber-security">
+              <span class="icon__nav-bar--cyber-security"></span>
+              <small>Cyber</small>
+              Security
+            </a>
+
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/cyber-security-assessment">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Cyber Security Assessment</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/cyber-security-management">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Cyber Security Management</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/cyber-penetration-testing">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Cyber Penetration Testing</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/cyber-essentials-certification">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Cyber Essentials Certification</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/pci-compliance">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>PCI Compliance</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/cyber-security/hacker-prevention">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Hacking Prevention</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech">
+              <span class="icon__nav-bar--developer-course"></span>
+              <small>Developer</small>
+              Course
+            </a>
+
+            <div>
+              <ul>
+                <li>Our Developer Course Services</li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Train For A Career In Tech</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/skills-bootcamp">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Skills Bootcamp</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech/scion-scheme-frequently-asked-questions">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Scion Scheme Frequently Asked Questions</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech/scion-collaborators">
+                    <span>
+                      <span></span>
+                    </span>
+                    <span>Scion Collaborators</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <!-- End of sidebar-small div -->
+
       <ul>
         <li>
           <a href="https://www.netmatters.co.uk/bespoke-software">Services</a>
