--- a/index.html
+++ b/index.html
@@ -1948,6 +1948,28 @@
     </div>
     <!-- sidebar test code end -->
 
+    <!-- cookies stuff start -->
+    <button class="manage-cookies-button">Manage Consent</button>
+    <div class="cookies-app">
+      <div>
+        <div>
+          <div><h3>Cookies Policy</h3></div>
+          <div>
+            <p>
+              Our website uses cookies. This helps us provide you with a good experience on our website. To see what cookies we use and what they do, and to opt-in on non-essential cookies click
+              "change settings". For a detailed explanation, click on "<a href="https://www.netmatters.co.uk/privacy-policy">Privacy Policy</a>" otherwise click "Accept Cookies" to enter.
+            </p>
+          </div>
+          <div><button>Change Settings</button><button>Accept Cookies</button></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- cookies stuff end -->
+
+    <!-- javascript files start -->
     <script src="js/sidebar.js"></script>
+    <script src="js/cookies.js"></script>
+    <!-- javascript files end -->
   </body>
 </html>
