finished the cookies javascript, and fixed the z-index for the background

--- a/index.html
+++ b/index.html
@@ -1949,7 +1949,7 @@
     <!-- sidebar test code end -->
 
     <!-- cookies stuff start -->
-    <button class="manage-cookies-button">Manage Consent</button>
+    <button class="manage-consent-button">Manage Consent</button>
     <div class="cookies-app">
       <div>
         <div>
@@ -1960,7 +1960,7 @@
               "change settings". For a detailed explanation, click on "<a href="https://www.netmatters.co.uk/privacy-policy">Privacy Policy</a>" otherwise click "Accept Cookies" to enter.
             </p>
           </div>
-          <div><button>Change Settings</button><button>Accept Cookies</button></div>
+          <div><button>Change Settings</button><button id="accept-cookies-button">Accept Cookies</button></div>
         </div>
       </div>
     </div>
