done the sticky header

--- a/index.html
+++ b/index.html
@@ -1970,6 +1970,8 @@
     <!-- javascript files start -->
     <script src="js/sidebar.js"></script>
     <script src="js/cookies.js"></script>
+    <script src="js/plugins/scroll-up-bar.js"></script>
+    <script src="js/sticky.js"></script>
     <!-- javascript files end -->
   </body>
 </html>
