finished the clients tooltip

--- a/index.html
+++ b/index.html
@@ -1030,9 +1030,9 @@
                       Originally founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising
                       entrepreneurs and families.
                     </p>
-                    <a href="https://www.netmatters.co.uk/case-studies/ashcroft-partnership" class="button">
+                    <a href="https://www.netmatters.co.uk/case-studies/ashcroft-partnership" class="button ashcroft">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1049,9 +1049,9 @@
                   <div class="clients-box">
                     <h3>One Traveller</h3>
                     <p><a href="https://www.onetraveller.co.uk/" target="_blank" rel="">One Traveller</a>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/one-traveller-web-case-study" class="button">
+                    <a href="https://www.netmatters.co.uk/case-studies/one-traveller-web-case-study" class="button onetraveller">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1068,9 +1068,9 @@
                   <div class="clients-box">
                     <h3>Searles Leisure Resort</h3>
                     <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/searles-leisure-resort" class="button">
+                    <a href="https://www.netmatters.co.uk/case-studies/searles-leisure-resort" class="button searlesleisureresort">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1118,9 +1118,9 @@
                   <div class="clients-box">
                     <h3>Black Swan Care Group</h3>
                     <p>Black Swan Care Group own and manage 21 high-quality care and residential homes with a focus on putting the needs of their residents first.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/black-swan-care-group-home-management-software" class="button">
+                    <a href="https://www.netmatters.co.uk/case-studies/black-swan-care-group-home-management-software" class="button blackswancaregroup">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1185,9 +1185,9 @@
                   <div class="clients-box">
                     <h3>Girl Guiding Anglia</h3>
                     <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young women in the UK.</p>
-                    <a href="https://www.netmatters.co.uk/girl-guides-case-study" class="button">
+                    <a href="https://www.netmatters.co.uk/girl-guides-case-study" class="button girlguidinganglia">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1204,9 +1204,9 @@
                   <div class="clients-box">
                     <h3>Sweetzy</h3>
                     <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
-                    <a href="https://www.netmatters.co.uk/digital-marketing-case-study-sweetzy" class="button">
+                    <a href="https://www.netmatters.co.uk/digital-marketing-case-study-sweetzy" class="button sweetzy">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
@@ -1239,9 +1239,9 @@
                   <div class="clients-box">
                     <h3>GDST</h3>
                     <p>The <a href="https://www.gdst.net/">Girls' Day School Trust (GDST)</a> is the UK's leading family of 25 independent girls' schools.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/gdst-case-study" class="button">
+                    <a href="https://www.netmatters.co.uk/case-studies/gdst-case-study" class="button gdst">
                       View Our Case Study
-                      <span class="rightarrowicon"></span>
+                      <span class="icon__clients--button-right-arrow"></span>
                     </a>
                     <div class="bottomtriange"></div>
                   </div>
