fixed the warnings and errors with the w3 validator

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     /> -->
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
@@ -83,12 +83,9 @@
 
                 <!-- Phone icon for small displays -->
                 <a
-                  class=""
                   href="tel:01603704020"
                   onclick="gtag('event', 'Phone', {'event_category': 'Phone','event_action': 'contactus','event_label': 'Completion'});"
                   title="Call 01603704020 with 3CX Click to Call"
-                  tcxhref="tel:01603704020"
-                  target=""
                 >
                   <span class="icon__header-top--phone"></span>
                 </a>
@@ -96,7 +93,6 @@
 
                 <!-- Hamburger Menu -->
                 <button class="header-top-buttons" id="header-nav-button">
-                  <!-- <span class="icon__header-top--nav"></span> -->
                   <span class="hamburger-icon"></span>
                 </button>
                 <!-- End Hamburger Menu -->
@@ -107,8 +103,8 @@
             <!-- XSmall search bar -->
             <div>
               <form method="GET" action="https://www.netmatters.co.uk/search" accept-charset="UTF-8" class="search-bar-xsmall">
-                <label for="search-input" class="hidden">Search:</label>
-                <input class="" placeholder="Search..." id="search-input" name="keyword" type="text" value="" />
+                <label for="search-input2" class="hidden">Search:</label>
+                <input class="" placeholder="Search..." id="search-input2" name="keyword" type="text" value="" />
                 <button type="submit" id="search-submit">
                   <span class="icon__header-top--xsmall-search" aria-hidden="true"></span>
                 </button>
