banner text center on smaller media queries (iPad)

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>The East Of England's Leading Technology Company</h1>
                 <p>
@@ -460,7 +460,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>Bespoke Software</h1>
                 <p>
@@ -489,7 +489,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>IT Support</h1>
                 <p>
@@ -518,7 +518,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>Digital Marketing</h1>
                 <p>
@@ -548,7 +548,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>Telecoms Services</h1>
                 <p>
@@ -577,7 +577,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>Web Design</h1>
                 <p>
@@ -606,7 +606,7 @@
               </picture>
             </div>
             <!-- End of banner item image -->
-            <div class="container">
+            <div class="container ipad-banner-quickfix">
               <div class="banner-item-content">
                 <h1>Cyber Security</h1>
                 <p>
