made the icons 2x2

--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
                     </picture>
                   </div>
                   <h4>Follow us on:</h4>
-                  <div class="">
+                  <div class="footer-icons">
                     <a class="" href="https://en-gb.facebook.com/netmatters/" target="_blank" rel="">
                       <span class="icon__footer--facebook"></span>
                     </a>
