--- a/index.html
+++ b/index.html
@@ -1019,18 +1019,20 @@
           <div class="clients-section">
             <div class="flex">
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Ashcroft Partnership LLP</h3>
-                    <p>
-                      Originally founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising
-                      entrepreneurs and families.
-                    </p>
-                    <a href="https://www.netmatters.co.uk/case-studies/ashcroft-partnership" class="button ashcroft">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Ashcroft Partnership LLP</h3>
+                      <p>
+                        Originally founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising
+                        entrepreneurs and families.
+                      </p>
+                      <a href="https://www.netmatters.co.uk/case-studies/ashcroft-partnership" class="button ashcroft">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1041,15 +1043,17 @@
               </div>
               <!-- End of client_item 1 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>One Traveller</h3>
-                    <p><a href="https://www.onetraveller.co.uk/" target="_blank" rel="">One Traveller</a>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/one-traveller-web-case-study" class="button onetraveller">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>One Traveller</h3>
+                      <p><a href="https://www.onetraveller.co.uk/" target="_blank" rel="">One Traveller</a>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
+                      <a href="https://www.netmatters.co.uk/case-studies/one-traveller-web-case-study" class="button onetraveller">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1060,15 +1064,17 @@
               </div>
               <!-- End of client_item 2 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Searles Leisure Resort</h3>
-                    <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/searles-leisure-resort" class="button searlesleisureresort">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Searles Leisure Resort</h3>
+                      <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
+                      <a href="https://www.netmatters.co.uk/case-studies/searles-leisure-resort" class="button searlesleisureresort">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1079,12 +1085,14 @@
               </div>
               <!-- End of client_item 3 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Busseys</h3>
-                    <p>One of the UK's leading Ford dealerships.</p>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Busseys</h3>
+                      <p>One of the UK's leading Ford dealerships.</p>
 
-                    <div class="bottomtriange"></div>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1095,11 +1103,13 @@
               </div>
               <!-- End of client_item 4 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Crane Garden Buildings</h3>
-                    <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Crane Garden Buildings</h3>
+                      <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1110,15 +1120,17 @@
               </div>
               <!-- End of client_item 5 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Black Swan Care Group</h3>
-                    <p>Black Swan Care Group own and manage 21 high-quality care and residential homes with a focus on putting the needs of their residents first.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/black-swan-care-group-home-management-software" class="button blackswancaregroup">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Black Swan Care Group</h3>
+                      <p>Black Swan Care Group own and manage 21 high-quality care and residential homes with a focus on putting the needs of their residents first.</p>
+                      <a href="https://www.netmatters.co.uk/case-studies/black-swan-care-group-home-management-software" class="button blackswancaregroup">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1129,12 +1141,14 @@
               </div>
               <!-- End of client_item 6 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Xupes</h3>
-                    <p>Xupes</p>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Xupes</h3>
+                      <p>Xupes</p>
 
-                    <div class="bottomtriange"></div>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1145,12 +1159,14 @@
               </div>
               <!-- End of client_item 7 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>BEAT</h3>
-                    <p>The UK's eating disorder charity founded in 1989.</p>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>BEAT</h3>
+                      <p>The UK's eating disorder charity founded in 1989.</p>
 
-                    <div class="bottomtriange"></div>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1161,12 +1177,14 @@
               </div>
               <!-- End of client_item 8 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Survey Solutions</h3>
-                    <p>Survey Solutions</p>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Survey Solutions</h3>
+                      <p>Survey Solutions</p>
 
-                    <div class="bottomtriange"></div>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1177,15 +1195,17 @@
               </div>
               <!-- End of client_item 9 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Girl Guiding Anglia</h3>
-                    <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young women in the UK.</p>
-                    <a href="https://www.netmatters.co.uk/girl-guides-case-study" class="button girlguidinganglia">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Girl Guiding Anglia</h3>
+                      <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young women in the UK.</p>
+                      <a href="https://www.netmatters.co.uk/girl-guides-case-study" class="button girlguidinganglia">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1196,15 +1216,17 @@
               </div>
               <!-- End of client_item 10 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Sweetzy</h3>
-                    <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
-                    <a href="https://www.netmatters.co.uk/digital-marketing-case-study-sweetzy" class="button sweetzy">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Sweetzy</h3>
+                      <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
+                      <a href="https://www.netmatters.co.uk/digital-marketing-case-study-sweetzy" class="button sweetzy">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1215,12 +1237,14 @@
               </div>
               <!-- End of client_item 11 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>Howes Percival</h3>
-                    <p>Howes Percival.</p>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>Howes Percival</h3>
+                      <p>Howes Percival.</p>
 
-                    <div class="bottomtriange"></div>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
@@ -1231,15 +1255,17 @@
               </div>
               <!-- End of client_item 12 -->
               <div class="clients-item">
-                <div class="clients-details">
-                  <div class="clients-box">
-                    <h3>GDST</h3>
-                    <p>The <a href="https://www.gdst.net/">Girls' Day School Trust (GDST)</a> is the UK's leading family of 25 independent girls' schools.</p>
-                    <a href="https://www.netmatters.co.uk/case-studies/gdst-case-study" class="button gdst">
-                      View Our Case Study
-                      <span class="icon__clients--button-right-arrow"></span>
-                    </a>
-                    <div class="bottomtriange"></div>
+                <div class="clients-hidden-hover-area">
+                  <div class="clients-details">
+                    <div class="clients-box">
+                      <h3>GDST</h3>
+                      <p>The <a href="https://www.gdst.net/">Girls' Day School Trust (GDST)</a> is the UK's leading family of 25 independent girls' schools.</p>
+                      <a href="https://www.netmatters.co.uk/case-studies/gdst-case-study" class="button gdst">
+                        View Our Case Study
+                        <span class="icon__clients--button-right-arrow"></span>
+                      </a>
+                      <div class="bottom-triangle"></div>
+                    </div>
                   </div>
                 </div>
                 <picture>
